<?xml version="1.0" encoding="utf-8"?>

<!-- Note that due to the utter brokenness of the Android API, the width and height 
  of the layout specified here is ignored when the layout is inflated as part of a 
  dialog. The width and height specified here are used for the purposes of designing 
  the layout in the GUI editor, but the actual width and height of the dialog must 
  be set at run-time. See org.nypl.simplified.app.LogoutDialog. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/logout_dialog"
  android:layout_width="@dimen/login_dialog_width"
  android:layout_height="@dimen/login_dialog_height"
  android:gravity="center"
  android:padding="16dp">

  <TextView android:id="@+id/logout_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="16dp"
    android:gravity="center"
    android:text="@string/settings_logout_confirm"
    android:textAlignment="center" />

  <RelativeLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/logout_text"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal">

    <Button android:id="@+id/logout_cancel"
      style="?android:attr/buttonStyleSmall"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/settings_accessibility_log_out_cancel"
      android:text="@string/settings_log_out_cancel" />

    <Button android:id="@+id/logout_confirm"
      style="?android:attr/buttonStyleSmall"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_toEndOf="@id/logout_cancel"
      android:contentDescription="@string/settings_accessibility_log_out"
      android:text="@string/settings_log_out" />
  </RelativeLayout>

</RelativeLayout>