<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/catalog_action_search"
    android:icon="@drawable/ic_search_black_48dp"
    android:title="@string/catalog_search"
    android:enabled="false"
    android:visible="false"
    android:actionViewClass="android.widget.SearchView"
    android:showAsAction="ifRoom|collapseActionView" />

  <item
    android:id="@+id/catalog_action_sync_books"
    android:title="@string/books_sync"
    android:enabled="false"
    android:visible="false"
    android:showAsAction="never|withText|collapseActionView" />

  <item
    android:id="@+id/catalog_action_refresh"
    android:title="@string/catalog_refresh"
    android:enabled="false"
    android:visible="false"
    android:showAsAction="never|withText|collapseActionView" />

</menu>
