<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/book_revoke_dialog"
  android:layout_width="@dimen/book_revoke_dialog_width"
  android:layout_height="@dimen/book_revoke_dialog_height"
  android:gravity="center"
  android:padding="16dp">

  <TextView android:id="@+id/book_revoke_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="16dp"
    android:gravity="center"
    android:text="@string/catalog_book_revoke_loan_confirm" />

  <RelativeLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/book_revoke_text"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal">
    <Button android:id="@+id/book_revoke_cancel"
      style="?android:attr/buttonStyleSmall"
      android:layout_width="wrap_content"
      android:layout_height="@dimen/button_standard_height"
      android:background="@drawable/simplified_button"
      android:contentDescription="@string/catalog_accessibility_book_revoke_loan_cancel"
      android:text="@string/catalog_book_revoke_cancel"
      android:textColor="@drawable/simplified_button_text" />
    <Button android:id="@+id/book_revoke_confirm"
      style="?android:attr/buttonStyleSmall"
      android:layout_width="wrap_content"
      android:layout_height="@dimen/button_standard_height"
      android:layout_centerHorizontal="true"
      android:layout_marginStart="16dp"
      android:layout_toEndOf="@id/book_revoke_cancel"
      android:background="@drawable/simplified_button"
      android:text="@string/catalog_book_revoke_loan"
      android:textColor="@drawable/simplified_button_text" />
  </RelativeLayout>
</RelativeLayout>
