<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_margin="16dp"
  android:layout_height="match_parent"
  android:layout_width="match_parent">

  <TextView
    android:id="@+id/catalog_age_gate_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="64dp"
    android:gravity="center"
    android:textSize="18sp"
    android:text="@string/age_verification_question" />

  <LinearLayout
    android:layout_below="@+id/catalog_age_gate_text"
    android:layout_centerInParent="true"
    android:layout_marginTop="64dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
      android:id="@+id/catalog_age_gate_younger"
      android:layout_width="128dp"
      android:layout_height="wrap_content"
      android:lines="1"
      android:text="@string/age_verification_13_younger" />

    <Button
      android:id="@+id/catalog_age_gate_older"
      android:layout_width="128dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:lines="1"
      android:text="@string/age_verification_13_older" />
  </LinearLayout>

</RelativeLayout>